# safety-probe

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml
configs/: default_sweep.yaml  model_comparison.yaml  quantization_sweep.yaml  quick_sweep.yaml  speculative_sweep.yaml  together_sweep.yaml
outputs/: experiment_report_apr17.md  meta-llama_Llama-3.3-70B-Instruct-Turbo_1776404804.json  meta-llama_Meta-Llama-3-8B-Instruct_quant_sweep_1776836096.json  meta-llama_Meta-Llama-3-8B-Instruct_quant_sweep_rejudged.json  report.json
outputs/llama-70b/: llama-3.3-70b-versatile_1776236414.json  llama-3.3-70b-versatile_1776236807.json  report.json
outputs/spec_baseline/: meta-llama_Meta-Llama-3-8B-Instruct_1776836658.json  meta-llama_Meta-Llama-3-8B-Instruct_1776837395.json  meta-llama_Meta-Llama-3-8B-Instruct_1776838302.json  report.json
outputs/spec_decoding/: meta-llama_Meta-Llama-3-8B-Instruct_1776839204.json  report.json
safety_probe/: __init__.py  cli.py
safety_probe/analysis/: __init__.py  curves.py  phase_detection.py  report.py
safety_probe/backends/: __init__.py  base.py  openai_backend.py  transformers_backend.py  vllm_backend.py
safety_probe/judges/: __init__.py  base.py  classifier_judge.py  composite.py  llm_judge.py  rule_judge.py
safety_probe/metrics/: __init__.py  safety_metrics.py
safety_probe/mitigations/: __init__.py  profiles.py
safety_probe/probes/: __init__.py  base.py  probe_sets.py
safety_probe/sweep/: __init__.py  grid.py  model_comparison_sweep.py  parameter_sweep.py  quantization_sweep.py
tests/: test_judges.py  test_metrics.py  test_probes.py  test_sweep.py
